# bkey

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml
docs/: docs.json  index.mdx  openapi.json  quickstart.mdx
docs/api-reference/: get-oauthjwks.mdx  get-userinfo.mdx  get-v1checkout-status.mdx  get-v1merchantsconnect.mdx  get-v1payment-sessions.mdx  get-v1vaultaccess.mdx  get-well-knownopenid-configuration.mdx  overview.mdx  post-oauthbc-authorize.mdx  post-oauthdevicecode.mdx  post-oauthrevoke.mdx  post-oauthtoken.mdx  post-v1checkoutinitiate.mdx  post-v1payment-sessions.mdx  post-v1payment-sessionsagent.mdx  post-v1vaultaccess.mdx
docs/api-reference/checkout/: get-checkout-status.mdx  initiate-checkout.mdx
docs/api-reference/oauth/: get-jwks.mdx  get-well-knownopenid-configuration.mdx
docs/api-reference/payments/: get-v1payment-sessions.mdx  merchant-connect.mdx
docs/api-reference/vault/: get-vault-access-status.mdx  request-vault-access.mdx
docs/authentication/: ciba.mdx  client-credentials.mdx  device-authorization.mdx  integrating-bkey.mdx  overview.mdx
docs/guides/: agent-checkout.mdx  encryption.mdx  mcp-integration.mdx  vault-secrets.mdx  x402-payments.mdx
docs/sdk/: cli.mdx  python.mdx  typescript.mdx
examples/curl/: checkout.sh  ciba-flow.sh  client-credentials.sh  device-auth.sh
examples/python/agent-checkout/: .env.example  .gitignore  README.md  checkout.py  pyproject.toml  requirements.txt
examples/python/agent-checkout/src/bkey_example_agent_checkout/: __init__.py  main.py
examples/python/vault-access/: .env.example  README.md  access.py  pyproject.toml
examples/python/vault-access/src/bkey_example_vault_access/: __init__.py  main.py
examples/typescript/agent-checkout/: .env.example  README.md  package.json
examples/typescript/agent-checkout/src/: checkout.ts  index.ts
examples/typescript/mcp-server/: .env.example  README.md  package.json
examples/typescript/mcp-server/src/: index.ts
examples/typescript/vault-access/: .env.example  README.md  package.json
examples/typescript/vault-access/src/: access.ts  index.ts
examples/typescript/x402-agent/: .env.example  README.md  package.json
examples/typescript/x402-agent/src/: agent.ts
integrations/jetbrains/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
integrations/jetbrains/src/main/kotlin/id/bkey/jetbrains/: BKeyCheckinHandler.kt  BKeyCheckinHandlerFactory.kt  BKeyCliRunner.kt  BKeyGitHook.kt  BKeyNotifications.kt  BKeyProjectStartup.kt
integrations/jetbrains/src/main/kotlin/id/bkey/jetbrains/settings/: BKeyConfigurable.kt  BKeySettings.kt
integrations/jetbrains/src/main/resources/messages/: BKeyBundle.properties
python/: README.md  pyproject.toml
python/bkey/: __init__.py  client.py  exceptions.py  types.py
python/bkey/mcp/: __init__.py
python/tests/: test_client.py  test_exceptions.py  test_types.py
rust/: Cargo.toml  README.md
rust/src/: lib.rs
skills/bkey/: README.md  SKILL.md
specs/: ciba-flow.md  openapi.json
typescript/: package.json  pnpm-lock.yaml
