[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bkey-sdk"
version = "0.2.0"
description = "BKey SDK — biometric approval, vault, and checkout for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "BKey", email = "dev@bkey.id" },
]
keywords = ["bkey", "biometric", "ciba", "oauth", "vault", "checkout", "agent", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
async = ["httpx>=0.27.0"]
mcp = ["mcp>=1.0.0"]
fastapi = ["fastapi>=0.100.0"]
all = ["bkey-sdk[async,mcp,fastapi]"]

[project.urls]
Homepage = "https://bkey.id"
Documentation = "https://bkey.id/docs"
Repository = "https://github.com/bkeyID/bkey"
Issues = "https://github.com/bkeyID/bkey/issues"

[tool.hatch.build.targets.wheel]
packages = ["bkey"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100
