[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bkey-example-agent-checkout"
version = "0.1.0"
description = "BKey example — agent-initiated checkout gated by biometric approval."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "BKey", email = "dev@bkey.id" },
]
keywords = ["bkey", "biometric", "ciba", "checkout", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "bkey-sdk>=0.2.0",
]

[project.scripts]
bkey-agent-checkout = "bkey_example_agent_checkout.main:main"

[project.urls]
Homepage = "https://bkey.id"
Repository = "https://github.com/bkeyID/bkey"

[tool.hatch.build.targets.wheel]
packages = ["src/bkey_example_agent_checkout"]

[tool.ruff]
target-version = "py310"
line-length = 100
