[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bkey-example-vault-access"
version = "0.1.0"
description = "BKey example — biometrically-gated vault access with client-side E2EE decryption."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "BKey", email = "dev@bkey.id" },
]
keywords = ["bkey", "biometric", "ciba", "vault", "e2ee", "x25519"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "bkey-sdk>=0.2.0",
    "pynacl>=1.5.0",
    "requests>=2.28.0",
]

[project.scripts]
bkey-vault-access = "bkey_example_vault_access.main:main"

[project.urls]
Homepage = "https://bkey.id"
Repository = "https://github.com/bkeyID/bkey"

[tool.hatch.build.targets.wheel]
packages = ["src/bkey_example_vault_access"]

[tool.ruff]
target-version = "py310"
line-length = 100
